--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
+    "knex": "^0.14.6",
     "nodemon": "^1.17.3",
     "pg": "^7.4.1"
   }
